--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,13 +9,12 @@ spring.application.name=despliegue-api-rest
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://dpg-d4k9s5q4d50c73dcetp0-a.oregon-postgres.render.com:5432/pets?sslmode=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_ciR1In8OvFYW
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
-server.port=${PORT}
