--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.application.name=despliegue-api-rest
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.datasource.url=jdbc:postgresql://dpg-d4k9s5q4d50c73dcetp0-a.oregon-postgres.render.com:5432/pets?sslmode=require
-spring.datasource.username=neondb_owner
-spring.datasource.password=npg_ciR1In8OvFYW
+spring.datasource.username=admin123
+spring.datasource.password=zM9N0BQxaLEfflliyG8fJ5QeMgrtdFOn
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / Hibernate
